--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contactactate con nostros"> 
+    <meta name="keywords" content="contacto">
+    <title>New York</title>
     <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"> <img src="../img/logo.jpg" alt="Logo" class="logo-tamaño"></a>
+              <a class="navbar-brand main-logo" href="#"> <img src="../img/logo-viajeros.png" alt="Logo" class="logo-tamaño"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -67,7 +70,7 @@
         <br>
     </div>
 <footer>
-    <img src="../img/logo.jpg" class="logo-tamaño"alt="logo-footer" >    
+    <img src="../img/logo-viajeros.png" class="logo-tamaño"alt="logo-footer" >    
     <img src="../img/gmail.png" class="footer-img"alt="gmail" >
     <img src="../img/facebook.png" class="footer-img"alt="facebook">
     <img src="../img/instagram.png" class="footer-img"alt="instagram" >
