--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Toda la informacion sobre destinos, cultura, gastronomia, actividades,puntos de interes. Si queres aportar al blog contactate con nosotros"> 
+    <meta name="keywords" content="blog de viajes, consejos para viajar, escapadas, viajes culturales, viajar barato, viajar en familia, mejores playas">
     <title>Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
