--- a/pages/destino-amsterdam.html
+++ b/pages/destino-amsterdam.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <meta name="description" content="Toda la informacion sobre Amsterdam, cultura, gastronomia, actividades, clima, puntos de interes"> 
+    <meta name="keywords" content="Amsterdam, lo mejor de Amsterdam, blog de viajes">
+    <title>Amsterdam</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -17,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"> <img src="../img/logo.jpg" alt="Logo" class="logo-tamaño"></a>
+              <a class="navbar-brand main-logo" href="#"> <img src="../img/logo-viajeros.png" alt="Logo" class="logo-tamaño"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -44,57 +46,56 @@
           </nav>
     </header>
     <div class="web-background mas-leidos pag-mexico">
-        <div class="img-principal "></div>
-        <div class="div-amsterdam">
+      <div class="img-principal "></div>
+      <div class="div-amsterdam">
         <div class="principal-amsterdam">
-        <h2>Bienvenidos a Ámsterdam</h2>
-        <p>Ámsterdam despliega su patrimonio nacional en la fascinante arquitectura de los canales, los museos repletos de obras de grandes maestros clásicos, los locales de degustación de jene-ver (ginebra holandesa) y los bruin cafés (pubs tradicionales holandeses). Sin embargo, alberga también una increíble diversidad de culturas y cocinas junto con algunos de los locales nocturnos más rompedores de Europa.</p> 
-        
-        <h3>Cuándo ir a Ámsterdam</h3>
-
-        <div class="row">
-          <div class="col-lg-6">
-          <h4> Mejor época para viajar a Ámsterdam</h4>
-          Primavera (mar-may)
-          Gentío por el Día del Rey (27 de abril).
-          Verano (jun-ago)
-          Temporada alta, tiempo de terrazas y festivales.
-          Otoño (sep-nov)
-          Los precios descienden, comienza la temporada cultural regular.
-          Invierno (dic-feb)
-          Patinaje sobre hielo, cafés con chimenea y precios de temporada baja suavizan los días fríos y oscuros.</p>
+          <h2>Bienvenidos a Ámsterdam</h2>
+          <p>Ámsterdam despliega su patrimonio nacional en la fascinante arquitectura de los canales, los museos repletos de obras de grandes maestros clásicos, los locales de degustación de jene-ver (ginebra holandesa) y los bruin cafés (pubs tradicionales holandeses). Sin embargo, alberga también una increíble diversidad de culturas y cocinas junto con algunos de los locales nocturnos más rompedores de Europa.</p> 
+          <h3>Cuándo ir a Ámsterdam</h3>
+          <div class="row">
+            <div class="col-lg-6">
+              <h4> Mejor época para viajar a Ámsterdam</h4>
+              Primavera (mar-may)
+              Gentío por el Día del Rey (27 de abril).
+              Verano (jun-ago)
+              Temporada alta, tiempo de terrazas y festivales.
+              Otoño (sep-nov)
+              Los precios descienden, comienza la temporada cultural regular.
+              Invierno (dic-feb)
+              Patinaje sobre hielo, cafés con chimenea y precios de temporada baja suavizan los días fríos y oscuros.</p>
+            </div>
+            <div class="col-lg-6">
+            <h4>Clima en Ámsterdam</h4>
+            <p> Marzo-mayo 
+            Época de tulipanes y alternancia de buen tiempo y lluvia.
+            Junio-agosto
+            Días largos y cálidos.
+            Septiembre-noviembre 
+            Puede ser lluvioso.
+            Diciembre-febrero 
+            Días fríos y oscuros.</p>
+            </div>
           </div>
-          <div class="col-lg-6">
-          <h4>Clima en Ámsterdam</h4>
-          <p> Marzo-mayo 
-          Época de tulipanes y alternancia de buen tiempo y lluvia.
-          Junio-agosto
-          Días largos y cálidos.
-          Septiembre-noviembre 
-          Puede ser lluvioso.
-          Diciembre-febrero 
-          Días fríos y oscuros.</p>
+          <h3>Lo imprescindible</h3>
+          <div class="row">
+            <div class="col-lg-4">
+              <h4>Palacio Real</h4>
+              <p> El Palacio Real actual se concibió como un ayuntamiento ilustre que se terminó en 1655. El arquitecto Jacob van Campen no reparó en gastos para exhibir la riqueza de Ámsterdam y competir con los edificios europeos más majestuosos de la época. El resultado es opulencia en a gran escala, sobre todo de noche, cuando el exterior se ilumina espectacularmente.</p>
+            </div>
+            <div class="col-lg-4">
+              <h4>Begijnhof</h4>
+              <p>Una modesta puerta de paso a este patio escondido del siglo XIV, con pequeñas casas y jardines. Ya no es secreto, pero sigue constituyendo un surrealista remanso de paz en medio de la ciudad.</p>
+            </div>
+            <div class="col-lg-4">
+              <h4>Casa de Ana Frank</h4>
+              <p>Es una de las historias más cautivadoras del s. XX: una chica judía obligada a ocultarse con su familia y sus amigos para evitar la deportación a los campos de concentración nazi. La casa que utilizaron como escondite atrae a más de un millón de visitantes al año.</p>
+            </div> 
           </div>
-        </div>
-        
-        <h3>Lo imprescindible</h3>
-        <div class="row">
-          <div class="col-lg-4">
-            <h4>Palacio Real</h4>
-            <p> El Palacio Real actual se concibió como un ayuntamiento ilustre que se terminó en 1655. El arquitecto Jacob van Campen no reparó en gastos para exhibir la riqueza de Ámsterdam y competir con los edificios europeos más majestuosos de la época. El resultado es opulencia en a gran escala, sobre todo de noche, cuando el exterior se ilumina espectacularmente.</p>
-          </div>
-          <div class="col-lg-4">
-            <h4>Begijnhof</h4>
-            <p>Una modesta puerta de paso a este patio escondido del siglo XIV, con pequeñas casas y jardines. Ya no es secreto, pero sigue constituyendo un surrealista remanso de paz en medio de la ciudad.</p>
-          </div>
-          <div class="col-lg-4">
-            <h4>Casa de Ana Frank</h4>
-            <p>Es una de las historias más cautivadoras del s. XX: una chica judía obligada a ocultarse con su familia y sus amigos para evitar la deportación a los campos de concentración nazi. La casa que utilizaron como escondite atrae a más de un millón de visitantes al año.</p>
-          </div> 
         </div>               
+      </div>
     </div>
 <footer>
-    <img src="../img/logo.jpg" class="logo-tamaño"alt="logo-footer" >    
+    <img src="../img/logo-viajeros.png" class="logo-tamaño"alt="logo-footer" >    
     <img src="../img/gmail.png" class="footer-img"alt="gmail" >
     <img src="../img/facebook.png" class="footer-img"alt="facebook">
     <img src="../img/instagram.png" class="footer-img"alt="instagram" >
