--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Somos una guia para viajeros"> 
+    <meta name="keywords" content="viajeros, mi guia de viajes, blog de viajes, guia de viajes, viaje a tailandia, turismo mexico, viajar, consejos viaje, viaje y turismo">
     <title>Quienes somos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"> <img src="../img/logo.jpg" alt="Logo" class="logo-tamaño"></a>
+              <a class="navbar-brand main-logo" href="#"> <img src="../img/logo-viajeros.png" alt="Logo" class="logo-tamaño"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
