4ta entrega proyecto

--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
                 <h1>TURISMO</h1>
                 <h4>Conoce el lugar antes de llegar</h4>
             </div>
-            <img src="img/back-home-1.png" class="d-block w-100" alt="...">
+            <img src="img/back-home-1.png" class="d-block w-100" alt="carrousel-globos">
           </div>
           <div class="carousel-item">
             <div class="carousel-caption d-none d-md-block">
                 <h1>TURISMO</h1>
                 <h4>Conoce el lugar antes de llegar</h4>
             </div>
-            <img src="img/back-home-2.png" class="d-block w-100" alt="...">
+            <img src="img/back-home-2.png" class="d-block w-100" alt="carrousel-montañas">
           </div>
           <div class="carousel-item">
             <div class="carousel-caption d-none d-md-block">
                 <h1>TURISMO</h1>
                 <h4>Conoce el lugar antes de llegar</h4>
             </div>
-            <img src="img/back-home-3.png" class="d-block w-100" alt="...">
+            <img src="img/back-home-3.png" class="d-block w-100" alt="carrousel-lago">
           </div>
           <div class="carousel-item">
             <div class="carousel-caption d-none d-md-block">
                 <h1>TURISMO</h1>
                 <h4>Conoce el lugar antes de llegar</h4>
             </div>
-            <img src="img/back-home-4.png" class="d-block w-100" alt="...">
+            <img src="img/back-home-4.png" class="d-block w-100" alt="carrousel-playa">
           </div>
         </div>
         <div class="carousel-indicators">
@@ -134,7 +134,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
                   <div class="card" >
-                      <img src="img/nieve.jpg" class="card-img-top" alt="pirineos">
+                      <img src="img/nieve.jpg" class="card-img-top" alt="blog-pirineos">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">Las 16 mejores experiencias en los Pirineos</h5>
                         <p class="card-text">Parque Nacional de Ordesa y Monte Perdido Es el segundo parque nacional de Europa por antigüedad y uno de los lugares más deseados por los montañeros.</p>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                   <div class="card" >
-                      <img src="img/bosque.jpg" class="card-img-top" alt="...">
+                      <img src="img/bosque.jpg" class="card-img-top" alt="blog-bosque">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">Actividades al aire libre en Argentina</h5>
                         <p class="card-text">Alpinismo, excursionismo y esquí han sido las actividades clásicas al aire libre en Argentina, pero hoy se practican muchas más: kitesurf en los Andes, parapente en las Sierras Centrales, submarinismo en la costa atlántica y pesca de truchas en la región de los lagos.</p>
@@ -152,7 +152,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                   <div class="card" >
-                      <img src="img/paraiso.jpg" class="card-img-top" alt="...">
+                      <img src="img/paraiso.jpg" class="card-img-top" alt="blog-playas">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">Las Fiyi a fondo: experiencias auténticas e inolvidables</h5>
                         <p class="card-text">Una inmersión en la cultura, naturaleza y estilo de vida de las Fiyi, un archipiélago de 330 islas en el Pacífico Sur que ofrece grandes y maravillosas experiencias.</p>
@@ -165,7 +165,7 @@
         <br>
     </div>
 <footer>
-    <img src="img/logo.jpg" class="logo-tamaño"alt="logo-footer" >    
+    <img src="img/logo-viajeros.png" class="logo-tamaño"alt="logo-footer" >    
     <img src="img/gmail.png" class="footer-img"alt="gmail" >
     <img src="img/facebook.png" class="footer-img"alt="facebook">
     <img src="img/instagram.png" class="footer-img"alt="instagram" >
