--- a/pages/blog.html
+++ b/pages/blog.html
@@ -12,37 +12,37 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../ccs/styles.css">
+    <link rel="stylesheet" href="../ccs/style.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"> <img src="../img/logo.jpg" alt="Logo" class="logo-tamaño"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="destinos.html">Destinos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="blog.html">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="quienes-somos.html">Quienes somos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-        </nav>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand main-logo" href="#"> <img src="../img/logo-viajeros.png" alt="Logo" class="logo-tamaño"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/destinos.html">Destinos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/quienes-somos.html">Quienes somos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
 
         <div class="container mas-leidos">
@@ -50,7 +50,7 @@
             <div class="row">
               <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card" >
-                    <img src="../img/nieve.jpg" class="card-img-top" alt="pirineos">
+                    <img src="../img/nieve.jpg" class="card-img-top" alt="blog-pirineos">
                     <div class="card-body">
                       <h5 class="card-title mis-titulos">Las 16 mejores experiencias en los Pirineos</h5>
                       <p class="card-text">Parque Nacional de Ordesa y Monte Perdido Es el segundo parque nacional de Europa por antigüedad y uno de los lugares más deseados por los montañeros.</p>
@@ -59,7 +59,7 @@
               </div>
               <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card" >
-                    <img src="../img/bosque.jpg" class="card-img-top" alt="...">
+                    <img src="../img/bosque.jpg" class="card-img-top" alt="blog-bosque">
                     <div class="card-body">
                       <h5 class="card-title mis-titulos">Actividades al aire libre en Argentina</h5>
                       <p class="card-text">Alpinismo, excursionismo y esquí han sido las actividades clásicas al aire libre en Argentina, pero hoy se practican muchas más: kitesurf en los Andes, parapente en las Sierras Centrales, submarinismo en la costa atlántica y pesca de truchas en la región de los lagos.</p>
@@ -68,7 +68,7 @@
               </div>
               <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card" >
-                    <img src="../img/paraiso.jpg" class="card-img-top" alt="...">
+                    <img src="../img/paraiso.jpg" class="card-img-top" alt="blog-playa">
                     <div class="card-body">
                       <h5 class="card-title mis-titulos">Las Fiyi a fondo: experiencias auténticas e inolvidables</h5>
                       <p class="card-text">Una inmersión en la cultura, naturaleza y estilo de vida de las Fiyi, un archipiélago de 330 islas en el Pacífico Sur que ofrece grandes y maravillosas experiencias.</p>
@@ -83,7 +83,7 @@
                       <img src="../img/castilloespaña.jpg" class="card-img-top" alt="Castillos españa">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">Los castillos mas espectaculares de España</h5>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <p class="card-text">Castillo de Loarre, Huesca El reino de los cielos está en Aragón Cual nido de águila encima de un peñón rocoso que domina la llanura de la Hoya de Huesca, este espectacular castillo medieval del s. XI está considerado uno de los más bellos del mundo.</p>
                     </div>
                 </div>
                 </div>
@@ -92,7 +92,7 @@
                       <img src="../img/comidachina.jpg" class="card-img-top" alt="Comidachina">
                       <div class="card-body">
                         <h5 class="card-title mis-titulos">Comidas tipicas chinas</h5>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <p class="card-text">Si has tenido la oportunidad de viajar a China, sabrás que la gastronomía china es mucho más que un arroz tres delicias o un rollito de primavera. De hecho, es excepcionalmente rica en matices y tan amplia como la extensión del país. ¿Eres de paladar viajero? Hoy te contamos 7 curiosidades de una de las cocinas más antiguas del mundo.</p>
                       </div>
                     </div>
                 </div>
@@ -100,15 +100,15 @@
                   <div class="card">
                       <img src="../img/playaparadisiaca.jpg" class="card-img-top" alt="playaparadisiaca">
                       <div class="card-body">
-                        <h5 class="card-title mis-titulos">10 playas paradisiacas mas visitadas</h5>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <h5 class="card-title mis-titulos">10 playas de brasil mas visitadas</h5>
+                        <p class="card-text">Varias de las playas más espectaculares de este planeta están en Brasil. Por todo el litoral hay islas idílicas, animadas playas urbanas y arenales en plena selva. Las hay desconocidas y también muy frecuentadas, arboladas o desérticas, relajadas o muy activas. Pero todas tienen un denominador común: ¡se merecen un viaje! Estas son algunas de las playas más paradisíacas de Brasil (y del mundo).</p>
                       </div>
                     </div>
                 </div>
               </div>
         </div>
 <footer>
-    <img src="../img/logo.jpg" class="logo-tamaño"alt="logo-footer" >    
+    <img src="../img/logo-viajeros.png" class="logo-tamaño"alt="logo-footer" >    
     <img src="../img/gmail.png" class="footer-img"alt="gmail" >
     <img src="../img/facebook.png" class="footer-img"alt="facebook">
     <img src="../img/instagram.png" class="footer-img"alt="instagram" >
