--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../ccs/styles.css">
+    <link rel="stylesheet" href="../ccs/style.css">
     
 </head>
 <body>
@@ -62,6 +62,7 @@
                     <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Ingrese su mensaje" rows="3"></textarea>
                 </div>
+                <button type="button" class="btn btn-outline-info">Enviar</button>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 mapa">
                 <img src="../img/mapa.jpg" alt="mapa">
