--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../ccs/styles.css">
+    <link rel="stylesheet" href="../ccs/style.css">
 </head>
 <body>
     <header>
@@ -50,32 +50,32 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares amsterdam">
-                        <h3>Amsterdam</h3>
+                      <h3><a href="destino-amsterdam.html">Asterdam</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares mexico">
-                        <h3><h3>Mexico</h3></h3>
+                      <h3><a href="destino-amsterdam.html">Mexico</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares new-york">
-                        <h3>New York</h3>
+                      <h3><a href="destino-amsterdam.html">New York</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares republica-dominicana">
-                        <h3>Cuba</h3>
+                      <h3><a href="destino-amsterdam.html">Cuba</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares tailandia">
-                        <h3><h3>Tailandia</h3></h3>
+                      <h3><a href="destino-amsterdam.html">Tailandia</a></h3>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="destinosPopulares japon">
-                        <h3>Japon</h3>
+                      <h3><a href="destino-amsterdam.html">Japon</a></h3>
                     </div>
                 </div>
                
