--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -12,13 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../ccs/styles.css">
+    <link rel="stylesheet" href="../ccs/style.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand main-logo" href="#"> <img src="../img/logo-viajeros.png" alt="Logo" class="logo-tamaño"></a>
+              <a class="navbar-brand main-logo" href="#"> <img src="../img/logo-viajeros.png" alt="Logo-viajeros" class="logo-tamaño"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -47,13 +47,12 @@
     <div class="web-background container mas-leidos">
         <section>
             <h2>¿Quienes somos?</h2>
-            <img src="" alt="">
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+            <p>Somos una página de viajes cuyo objetivo es contagiarte el virus viajero, ese es el espíritu de esta página. La página sigue creciendo día a día con más información sobre diferentes destinos, agregando más imágenes, videos e ideas para los apasionados por los viajes. Puedes encontrar casi cualquier cosa que quieras saber y lo que necesitas para una estancia en el extranjero: guías, información sobre miles de destinos, asistencia en seguros de viaje, presupuestos, las especialidades culinarias de cada país y mas!</p>
         </section>
         <br>
     </div>
 <footer>
-    <img src="../img/logo.jpg" class="logo-tamaño"alt="logo-footer" >    
+    <img src="../img/logo-viajeros.png" class="logo-tamaño"alt="logo-footer" >    
     <img src="../img/gmail.png" class="footer-img"alt="gmail" >
     <img src="../img/facebook.png" class="footer-img"alt="facebook">
     <img src="../img/instagram.png" class="footer-img"alt="instagram" >
